# jsmpeg-vnc-linux

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  makefile
src/: app.c  app.h  encoder.c  encoder.h  grabber.c  grabber.h  jskeycode2x11keycode.c  jskeycode2x11keycode.h  jsmpeg-vnc.c  server.c  server.h
src/ffmpeg/libavutil/: common.h  frame.h  intreadwrite.h  pixfmt.h
src/libwebsockets/: libwebsockets.h  lws_config.h
